<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutToast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ToastActivity">

    <EditText
        android:id="@+id/txtHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtHorizontal"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtVertical"
        android:inputType="textPersonName|number" />

    <EditText
        android:id="@+id/txtTextoToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtTextoToast"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/aliHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtRgHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtRgHorizontal" />

        <RadioButton
            android:id="@+id/rbIzquierda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbIzquierda" />

        <RadioButton
            android:id="@+id/rbMedio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbMedio" />

        <RadioButton
            android:id="@+id/rbDerecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbDerecha" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/aliVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtRgVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtRgVertical" />

        <RadioButton
            android:id="@+id/rbArriba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbArriba" />

        <RadioButton
            android:id="@+id/rbCentro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbCentro" />

        <RadioButton
            android:id="@+id/rbAbajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbAbajo" />
    </RadioGroup>

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mostrar"
        android:text="@string/btnMostrar" />
</LinearLayout>