<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutNotificacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".NotificacionActivity">

    <EditText
        android:id="@+id/txtTituloMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtTituloMensaje"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtTextoMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtTextoMensaje"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtTiempoMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtTiempoMensaje"
        android:inputType="number" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEnviar" />
</LinearLayout>